--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testImplementation 'org.mockito:mockito-core:5.3.1'
-    testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation 'org.skyscreamer:jsonassert:1.5.1'
     testImplementation 'org.assertj:assertj-core:3.24.2'
 
     testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
@@ -36,6 +34,8 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.13.0'
 
     testImplementation 'org.testcontainers:postgresql:1.18.3'
+
+    testImplementation 'org.awaitility:awaitility:4.2.1'
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
