--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     implementation 'com.h2database:h2:2.2.220'
     implementation 'org.postgresql:postgresql:42.6.0'
+    implementation 'org.apache.kafka:kafka-clients:3.7.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
@@ -35,6 +36,7 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.13.0'
 
     testImplementation 'org.testcontainers:postgresql:1.18.3'
+    testImplementation "org.testcontainers:kafka:1.19.8"
 
     testImplementation 'org.awaitility:awaitility:4.2.1'
 
