Some explicit assertJ stuff and better gradle tasks

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,14 @@ dependencies {
 }
 
 test {
+    useJUnitPlatform {
+        excludeTags 'failing', 'testcontainers'
+    }
+
+    finalizedBy jacocoTestReport
+}
+
+task alltests(type: Test) {
     useJUnitPlatform()
 
     finalizedBy jacocoTestReport
