--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.3.1'
     testImplementation 'org.assertj:assertj-core:3.24.2'
 
-    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
+    testImplementation 'org.wiremock:wiremock:3.9.1'
 
     testImplementation 'io.cucumber:cucumber-java:7.13.0'
     testImplementation 'io.cucumber:cucumber-junit:7.13.0'
